# SuperSharpShooter

./: README.md  pyproject.toml
supersharpshooter/: __main__.py  cli.py
supersharpshooter/modules/: defender.py
supersharpshooter/templates/: sharpshooter.js  sharpshooter.vba  sharpshooter.vbs  sharpshooterv4.js  sharpshooterv4.vba  sharpshooterv4.vbs  stageless.js  stageless.vba  stageless.vbs  stagelessv4.js  stagelessv4.vba  stagelessv4.vbs
work/: README.md
work/CSharpShooter/: SharpShooter.cs  SharpShooter.csproj
work/CSharpShooterStageless/: SharpShooter.csproj  SharpShooter.sln
work/CSharpShooterStagelessv4/: CheckPlease.cs  SharpShooter.cs  SharpShooter.csproj  SharpShooter.sln
work/CSharpShooterv4/: SharpShooter.cs  SharpShooter.csproj  SharpShooter.sln
